Separate bodyContainer from bodyFile, avoid dropdown clipping (fix #627)

--- a/client/message.styl
+++ b/client/message.styl
@@ -185,6 +185,8 @@ bootstrap-3-button(bg-color) // based on mixins/buttons.less
 
 // MessageFileDescription
 
+.bodyFile
+  padding-inline: 15px
 .fileDescription
   display: flex
   flex-direction: row
